--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -70,8 +70,8 @@
       "seo": {
         "description": "搜索引擎优化工具",
         "meta-tags": {
-          "description": "生成元标签",
-          "title": "元标签生成器"
+          "description": "生成 Meta 标签",
+          "title": "Meta 标签生成器"
         },
         "og-image": {
           "description": "生成 OG 图像",
