--- a/lang/zh-HK/common.json
+++ b/lang/zh-HK/common.json
@@ -70,8 +70,8 @@
       "seo": {
         "description": "搜尋引擎最佳化工具",
         "meta-tags": {
-          "description": "生成元標籤",
-          "title": "元標籤生成器"
+          "description": "生成網站的 meta 標籤",
+          "title": "Meta 標籤生成器"
         },
         "og-image": {
           "description": "生成 OG 圖像",
