--- a/lang/zh-CN/json.json
+++ b/lang/zh-CN/json.json
@@ -1,8 +1,13 @@
 {
   "json": {
+    "title": "JSON 工具",
+    "description": "高级 JSON 数据处理工具",
+    "tryNow": "立即试用",
+    "free": "免费",
+    "openSource": "开源",
     "diff": {
-      "added": "额外",
-      "addedProperties": "添加的属性",
+      "added": "新增",
+      "addedProperties": "新增的属性",
       "compare": "比较",
       "description": "比较两个 JSON 对象并找出它们的差异",
       "differences": "差异",
@@ -10,30 +15,30 @@
         "empty": "两个输入都是必需的",
         "invalid": "一个或两个输入中的 JSON 无效"
       },
-      "export": "出口",
+      "export": "导出",
       "exportAsCsv": "导出为 CSV",
       "exportAsJson": "导出为 JSON",
-      "exported": "导出为 {format} 成功！",
+      "exported": "已导出为 {format}",
       "exportResult": "导出结果",
       "leftInput": "原始 JSON",
-      "modified": "修改的",
-      "modifiedProperties": "修改属性",
-      "newValue": "新价值",
+      "modified": "已修改",
+      "modifiedProperties": "已修改的属性",
+      "newValue": "新值",
       "oldValue": "旧值",
-      "path": "小路",
-      "placeholder": "将您的 JSON 粘贴到此处...",
-      "removed": "已删除",
-      "removedProperties": "删除的属性",
+      "path": "路径",
+      "placeholder": "在此粘贴您的 JSON...",
+      "removed": "已移除",
+      "removedProperties": "已移除的属性",
       "rightInput": "修改后的 JSON",
       "share": "分享",
-      "title": "JSON 差异",
+      "title": "JSON 差异比较",
       "upload": "上传 JSON",
-      "value": "价值"
+      "value": "值"
     },
     "formatter": {
       "copied": "已复制到剪贴板！",
       "copy": "复制",
-      "description": "Format and validate your JSON data with advanced tools.",
+      "description": "使用高级工具格式化和验证您的 JSON 数据",
       "download": "下载 JSON",
       "error": {
         "empty": "输入不能为空",
@@ -42,34 +47,34 @@
       "format": "格式化",
       "input": "输入 JSON",
       "output": "格式化输出",
-      "placeholder": "粘贴你的 JSON 数据...",
+      "placeholder": "在此粘贴您的 JSON...",
       "share": "分享",
-      "title": "JSON 格式化器",
+      "title": "JSON 格式化工具",
       "upload": "上传 JSON"
     },
     "minifier": {
       "copied": "已复制到剪贴板！",
       "copy": "复制到剪贴板",
-      "description": "压缩和压缩你的 JSON 数据",
+      "description": "压缩和最小化您的 JSON 数据",
       "download": "下载",
       "error": {
         "empty": "输入不能为空",
         "invalid": "无效的 JSON"
       },
       "message": {
-        "success": "压缩 JSON 下载成功！"
+        "success": "已成功下载压缩后的 JSON！"
       },
       "minifiedOutput": "压缩输出",
       "minify": "压缩 JSON",
-      "placeholder": "粘贴你的 JSON 数据...",
-      "title": "JSON 压缩器",
+      "placeholder": "在此粘贴您的 JSON...",
+      "title": "JSON 压缩工具",
       "upload": "上传 JSON"
     },
     "validator": {
       "clear": "清除",
       "copied": "已复制到剪贴板！",
       "copy": "复制到剪贴板",
-      "description": "Validate your JSON data with advanced tools.",
+      "description": "使用高级工具验证您的 JSON 数据",
       "error": {
         "clipboard": "从剪贴板粘贴失败",
         "copy": "无法复制到剪贴板",
@@ -77,22 +82,17 @@
         "invalid": "无效的 JSON",
         "paste": "无法从剪贴板粘贴"
       },
-      "errorPosition": "位置 {position} 错误",
+      "errorPosition": "位置 {position} 发生错误",
       "input": "输入 JSON",
       "invalid": "JSON 无效",
-      "loadSample": "加载样品",
+      "loadSample": "加载示例",
       "paste": "从剪贴板粘贴",
-      "pasted": "从剪贴板粘贴！",
+      "pasted": "已从剪贴板粘贴！",
       "reset": "重置",
-      "title": "JSON 验证器",
+      "title": "JSON 验证工具",
       "valid": "JSON 有效",
       "validate": "验证",
       "validating": "正在验证..."
-    },
-    "description": "JSON 数据工具",
-    "free": "自由的",
-    "openSource": "开源",
-    "title": "JSON 工具",
-    "tryNow": "立即尝试"
+    }
   }
 }
