--- a/lang/zh-HK/json.json
+++ b/lang/zh-HK/json.json
@@ -1,10 +1,15 @@
 {
   "json": {
+    "title": "JSON 工具",
+    "description": "進階 JSON 資料處理工具",
+    "tryNow": "立即試用",
+    "free": "免費",
+    "openSource": "開源",
     "diff": {
-      "added": "額外",
+      "added": "新增",
       "addedProperties": "新增的屬性",
       "compare": "比較",
-      "description": "比較兩個 JSON Object 並找出它們的差異",
+      "description": "比較兩個 JSON 物件並找出它們的差異",
       "differences": "差異",
       "error": {
         "empty": "兩個輸入都是必需的",
@@ -13,27 +18,27 @@
       "export": "匯出",
       "exportAsCsv": "匯出為 CSV",
       "exportAsJson": "匯出為 JSON",
-      "exported": "匯出為 {format} 成功！",
+      "exported": "已匯出為 {format}",
       "exportResult": "匯出結果",
       "leftInput": "原始 JSON",
-      "modified": "修改的",
-      "modifiedProperties": "修改屬性",
+      "modified": "已修改",
+      "modifiedProperties": "已修改的屬性",
       "newValue": "新值",
       "oldValue": "舊值",
       "path": "路徑",
-      "placeholder": "粘貼你的 JSON Object...",
-      "removed": "已刪除",
-      "removedProperties": "刪除的屬性",
+      "placeholder": "在此貼上您的 JSON...",
+      "removed": "已移除",
+      "removedProperties": "已移除的屬性",
       "rightInput": "修改後的 JSON",
       "share": "分享",
-      "title": "JSON 差異",
+      "title": "JSON 差異比較",
       "upload": "上傳 JSON",
       "value": "值"
     },
     "formatter": {
       "copied": "已複製到剪貼簿！",
       "copy": "複製",
-      "description": "使用進階工具格式化和驗證您的 JSON Object",
+      "description": "使用進階工具格式化和驗證您的 JSON 資料",
       "download": "下載 JSON",
       "error": {
         "empty": "輸入不能為空",
@@ -42,26 +47,26 @@
       "format": "格式化",
       "input": "輸入 JSON",
       "output": "格式化輸出",
-      "placeholder": "粘貼你的 JSON Object...",
+      "placeholder": "在此貼上您的 JSON...",
       "share": "分享",
-      "title": "JSON 格式化器",
+      "title": "JSON 格式化工具",
       "upload": "上傳 JSON"
     },
     "minifier": {
       "copied": "已複製到剪貼簿！",
       "copy": "複製到剪貼簿",
-      "description": "壓縮原始JSON Object",
+      "description": "壓縮和最小化您的 JSON 資料",
       "download": "下載",
       "error": {
         "empty": "輸入不能為空",
         "invalid": "無效的 JSON 格式"
       },
       "message": {
-        "success": "壓縮 JSON 下載成功！"
+        "success": "已成功下載壓縮後的 JSON！"
       },
       "minifiedOutput": "壓縮輸出",
       "minify": "壓縮 JSON",
-      "placeholder": "粘貼你的 JSON Object...",
+      "placeholder": "在此貼上您的 JSON...",
       "title": "JSON Minifier",
       "upload": "上傳 JSON"
     },
@@ -69,30 +74,25 @@
       "clear": "清除",
       "copied": "已複製到剪貼簿！",
       "copy": "複製到剪貼簿",
-      "description": "使用進階工具驗證您的 JSON Object",
+      "description": "使用進階工具驗證您的 JSON 資料",
       "error": {
-        "clipboard": "從剪貼簿粘貼失敗",
+        "clipboard": "從剪貼簿貼上失敗",
         "copy": "無法複製到剪貼簿",
         "empty": "輸入不能為空",
         "invalid": "無效的 JSON",
         "paste": "無法從剪貼簿貼上"
       },
-      "errorPosition": "位置 {position} 錯誤",
+      "errorPosition": "位置 {position} 發生錯誤",
       "input": "輸入 JSON",
       "invalid": "JSON 無效",
-      "loadSample": "加載樣品",
-      "paste": "從剪貼簿粘貼",
-      "pasted": "從剪貼簿貼上！",
-      "reset": "重置",
-      "title": "JSON 驗證器",
+      "loadSample": "載入範例",
+      "paste": "從剪貼簿貼上",
+      "pasted": "已從剪貼簿貼上！",
+      "reset": "重設",
+      "title": "JSON 驗證工具",
       "valid": "JSON 有效",
       "validate": "驗證",
       "validating": "正在驗證..."
-    },
-    "tryNow": "立即嘗試",
-    "title": "JSON 工具",
-    "openSource": "開源",
-    "description": "JSON 資料工具",
-    "free": "自由的"
+    }
   }
 }
