--- a/lang/en/common.json
+++ b/lang/en/common.json
@@ -118,5 +118,52 @@
     "starOnGitHub": "Star on GitHub",
     "title": "Enjoying Our Developer Tools?",
     "yourStarHelps": "Your star helps others discover these tools too!"
+  },
+  "privacy-policy": {
+    "title": "Privacy Policy",
+    "last-updated": "Last Updated: December 25, 2024",
+    "introduction": "Welcome to RocksDev Tools. We value your privacy and are committed to protecting your personal data.",
+    "no-data-collection": {
+      "title": "Data Collection",
+      "description": "Apart from basic analytics data, we do not collect any personal information. All tools run locally in your browser."
+    },
+    "cookies": {
+      "title": "Use of Cookies",
+      "description": "We use necessary cookies to remember your language preferences and Google Analytics cookies to help us improve our services."
+    },
+    "third-party": {
+      "title": "Third-Party Services",
+      "description": "Our website is hosted on Vercel and uses Google Analytics for visitor analytics. These services may collect basic access data such as IP addresses and browser types."
+    },
+    "changes": {
+      "title": "Policy Changes",
+      "description": "We reserve the right to update this privacy policy at any time. Significant changes will be notified through the website."
+    }
+  },
+  "contact-us": {
+    "title": "Contact Us",
+    "introduction": "Thank you for using RocksDev Tools. If you have any questions, suggestions, or opportunities for collaboration, please reach out to us through the following channels:",
+    "social": {
+      "title": "Social Media",
+      "description": "You can find us on the following platforms:"
+    },
+    "github": {
+      "title": "GitHub",
+      "description": "If you find any issues or want to contribute code, please visit our GitHub repository.",
+      "repository": "RocksDev.Tools Repository",
+      "submit-issue": "Submit an Issue"
+    },
+    "feedback": {
+      "title": "Feedback",
+      "description": "We value your feedback! If you have any suggestions or find any issues, please let us know."
+    },
+    "social-links": {
+      "github": "Follow on GitHub",
+      "twitter": "Follow on Twitter",
+      "threads": "Follow on Threads",
+      "instagram": "Follow on Instagram",
+      "xiaohongshu": "Follow on Xiaohongshu",
+      "dailydev": "Follow on daily.dev"
+    }
   }
 }
