--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -79,7 +79,7 @@
           "description": "将 Base64 转换为其他格式",
           "title": "Base64 转换器"
         },
-        "description": "在不同数据格式之间转换",
+        "description": "快速可靠的数据格式转换器。支持 Base64、Markdown 等格式转换，即时预览结果。",
         "md2html": {
           "description": "将 Markdown 转换为 HTML",
           "title": "Markdown 转换器"
@@ -95,7 +95,7 @@
           "description": "生成iOS和Android应用图标",
           "title": "应用图标生成器"
         },
-        "description": "开发者实用工具和格式化工具",
+        "description": "基础开发工具集，包含正则测试器、图标生成器等。由开发者构建，服务开发者。",
         "regex": {
           "description": "测试和验证正则表达式",
           "title": "正则表达式测试工具"
@@ -103,7 +103,7 @@
         "title": "开发工具"
       },
       "json": {
-        "description": "JSON 工具",
+        "description": "专业的 JSON 处理套件，包含格式化、验证、对比和压缩工具。完美支持 JSON 数据的调试、比较和优化。",
         "diff": {
           "description": "比较和查找 JSON 文件之间的差异",
           "title": "JSON 差异比较"
@@ -123,7 +123,7 @@
         }
       },
       "seo": {
-        "description": "搜索引擎优化工具",
+        "description": "完整的搜索引擎优化工具包，生成元标签、社交媒体图片等，提升网站搜索可见度。",
         "meta-tags": {
           "description": "生成 Meta 标签",
           "title": "Meta 标签生成器"
@@ -135,7 +135,7 @@
         "title": "SEO 工具"
       },
       "text": {
-        "description": "文本处理和格式化工具",
+        "description": "高级文本处理工具，用于格式化、大小写转换和内容整理。简化您的文本处理工作流程。",
         "text-formatter": {
           "description": "使用高级工具格式化和操纵您的文本",
           "title": "文本格式化工具"
